--- a/ClientDM/win/nach.xaml
+++ b/ClientDM/win/nach.xaml
@@ -30,7 +30,7 @@
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
-            <Button Grid.Row="1" Width="150" Height="35" Content="Редактировать" Click="btnEdit_click" Style="{StaticResource b}"/>
+            <!--<Button Grid.Row="1" Width="150" Height="35" Content="Редактировать" Click="btnEdit_click" Style="{StaticResource b}"/>-->
         </Grid>
 
 
